refactor: auth